--- a/style.css
+++ b/style.css
@@ -1,18 +1,18 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
 
-body{
+body {
     padding: 0 2rem;
-    background-color:black;
-    overflow:hidden;
+    background-color: black;
+    overflow: hidden;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.app-container{
+.app-container {
     width: calc(100vw-4rem);
     height: 100vh;
     display: flex;
@@ -21,21 +21,23 @@ body{
 
 
 
-header,footer{
+header,
+footer {
     flex-basis: 15%;
 }
-main{
+
+main {
     flex-grow: 1;
     background-color: black;
     overflow: auto;
     padding: 1rem 0;
 }
 
-header{
+header {
     background-color: black;
 }
 
-footer{
+footer {
     background-color: rgb(47, 46, 46);
     position: fixed;
     right: 0;
@@ -44,26 +46,27 @@ footer{
     height: 50px;
 }
 
-.boxheader{
+.boxheader {
     text-align: right;
-    margin:.3rem .3rem 0 0;
+    margin: .3rem .3rem 0 0;
 
 }
 
 
-.butt-header{
+.butt-header {
     background-color: rgb(47, 46, 46);
     padding: 5px;
-   color: white;
+    color: white;
     border-radius: 2px;
 
 }
-.butt-header:hover{
+
+.butt-header:hover {
 
     color: bisque;
 }
 
-.container{
+.container {
     max-width: 1200px;
     margin: auto;
     display: flex;
@@ -72,29 +75,30 @@ footer{
     flex-wrap: wrap;
 }
 
-.card{
+.card {
     position: relative;
-    width: calc((100% - 56px ) / 7);
+    width: calc((100% - 56px) / 7);
     flex-shrink: 0;
-    
 
-    
+
+
 }
 
-.card img{
+.card img {
     width: 100%;
     height: 100%;
 }
-.spec-card{
+
+.spec-card {
     position: absolute;
     bottom: 0;
     left: 0;
     color: white;
     background-color: rgba(83, 82, 82, 0.6);
-    
+
 }
 
-.box-footer{
+.box-footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -102,35 +106,38 @@ footer{
     color: white;
 }
 
-.box-footer-2{
+.box-footer-2 {
     display: flex;
     align-items: center;
     height: 100%;
-    gap:2rem;
+    gap: 2rem;
 }
+
 .box-footer-2:hover {
     color: bisque;
 }
-.icon-footer{
+
+.icon-footer {
     font-size: 1rem;
 }
 
-.box-line{
+.box-line {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding:0 .5rem ;
+    padding: 0 .5rem;
 }
 
-.icon{
+.icon {
     text-align: center;
 }
 
-.box-footer-2.center .box-icon{
+.box-footer-2.center .box-icon {
     padding: 0 1rem;
 
 }
-.rgt-box-footer{
+
+.rgt-box-footer {
     height: 100%;
     display: flex;
     justify-content: center;
